# smart-house-system

./: .gitignore  README.md  Ray_Serv.py  docker-compose.yaml
Auth/: loginwindow.cpp  loginwindow.h  registrationwindow.cpp
Core/: mainwindow.h
SmartHouseSystem/: CMakeLists.txt  README.md  build.sh
SmartHouseSystem/Auth/: loginwindow.cpp  loginwindow.h  loginwindow.ui  registrationwindow.cpp  registrationwindow.h
SmartHouseSystem/Core/: main.cpp  mainwindow.cpp  mainwindow.h
SmartHouseSystem/DatabaseManager/: databasemanager.cpp  databasemanager.h
SmartHouseSystem/NetworkManager/: networkmanager.cpp  networkmanager.h
SmartHouseSystem/build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  SmartHouseSystem  cmake_install.cmake
SmartHouseSystem/build_ninja/SmartHouseSystem_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
SmartHouseSystem/build_ninja/SmartHouseSystem_autogen/4VKJKCZPXG/: moc_mainwindow.cpp.d
SmartHouseSystem/build_ninja/SmartHouseSystem_autogen/6VUZMYBDM6/: moc_loginwindow.cpp.d  moc_registrationwindow.cpp.d
SmartHouseSystem/build_ninja/SmartHouseSystem_autogen/SU3HB7CXQD/: moc_networkmanager.cpp.d
SmartHouseSystemServer/: CMakeLists.txt  Dockerfile  database.sqlite
SmartHouseSystemServer/DatabaseManager/: databasemanager.cpp  databasemanager.h
SmartHouseSystemServer/SmartHouseSystemServer/: main.cpp  smarthousesystemserver.cpp  smarthousesystemserver.h
db-init/: script.sql
flask_manager/: Dockerfile  app.py  device_simulator.py  requirements.txt
flask_manager/devices_templates/: heating_template.py  humidifier_template.py  lighting_template.py
flask_manager/sensors_templates/: humidity_sensor_template.py  temperature_sensor_template.py
flask_manager/templates/: heating_template.py  humidifier_template.py
images/: login_background
ray_service/: ray_cluster.py
